<resources>
    <string name="app_name">6x6 Sudoku</string>
    <string name="new_game">New Game</string>
    <string name="blank_cell">-</string>
    <string name="blank_header"></string>
    <string name="about">About</string>
    <string name="app_version">Version: 1.2</string>
    <string name="contact_me">You can contact me at</string>
    <string name="made_by">Made by Alex Carcar</string>

    <string name="delete">-</string>
    <string name="number6">6</string>
    <string name="number5">5</string>
    <string name="number4">4</string>
    <string name="number3">3</string>
    <string name="number2">2</string>
    <string name="number1">1</string>
    <string name="number6l">F</string>
    <string name="number5l">E</string>
    <string name="number4l">D</string>
    <string name="number3l">C</string>
    <string name="number2l">B</string>
    <string name="number1l">A</string>
    <string name="email_address">alexcarcar77@gmail.com</string>
    <string name="check">Check</string>
    <string name="congratulations">Congratulations!</string>
    <string name="puzzle_incomplete">Your puzzle has errors!</string>
    <string name="clear_board">Replay</string>
    <string name="go_back">Back</string>
    <string name="switch_symbols">Switch Symbols</string>
</resources>
