<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/gameGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="45dp">

        <TableRow>

            <Button
                android:id="@+id/cell00"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/color1"

                android:onClick="onCellTouch"
                android:text="@string/blank_cell"
                android:textSize="24sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/cell01"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/color1"

                android:onClick="onCellTouch"
                android:text="@string/blank_cell"
                android:textSize="24sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/cell02"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/color1"

                android:onClick="onCellTouch"
                android:text="@string/blank_cell"
                android:textSize="24sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/cell03"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/color2"

                android:onClick="onCellTouch"
                android:text="@string/blank_cell"
                android:textSize="24sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/cell04"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/color2"

                android:onClick="onCellTouch"
                android:text="@string/blank_cell"
                android:textSize="24sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/cell05"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/color2"

                android:onClick="onCellTouch"
                android:text="@string/blank_cell"
                android:textSize="24sp"
                android:textStyle="normal" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/cell10"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/color1"

                android:onClick="onCellTouch"
                android:text="@string/blank_cell"
                android:textSize="24sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/cell11"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/color1"

                android:onClick="onCellTouch"
                android:text="@string/blank_cell"
                android:textSize="24sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/cell12"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/color1"

                android:onClick="onCellTouch"
                android:text="@string/blank_cell"
                android:textSize="24sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/cell13"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/color2"

                android:onClick="onCellTouch"
                android:text="@string/blank_cell"
                android:textSize="24sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/cell14"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/color2"

                android:onClick="onCellTouch"
                android:text="@string/blank_cell"
                android:textSize="24sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/cell15"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/color2"

                android:onClick="onCellTouch"
                android:text="@string/blank_cell"
                android:textSize="24sp"
                android:textStyle="normal" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/cell20"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/color2"

                android:onClick="onCellTouch"
                android:text="@string/blank_cell"
                android:textSize="24sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/cell21"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/color2"

                android:onClick="onCellTouch"
                android:text="@string/blank_cell"
                android:textSize="24sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/cell22"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/color2"

                android:onClick="onCellTouch"
                android:text="@string/blank_cell"
                android:textSize="24sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/cell23"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/color1"

                android:onClick="onCellTouch"
                android:text="@string/blank_cell"
                android:textSize="24sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/cell24"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/color1"

                android:onClick="onCellTouch"
                android:text="@string/blank_cell"
                android:textSize="24sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/cell25"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/color1"

                android:onClick="onCellTouch"
                android:text="@string/blank_cell"
                android:textSize="24sp"
                android:textStyle="normal" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/cell30"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/color2"

                android:onClick="onCellTouch"
                android:text="@string/blank_cell"
                android:textSize="24sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/cell31"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/color2"

                android:onClick="onCellTouch"
                android:text="@string/blank_cell"
                android:textSize="24sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/cell32"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/color2"

                android:onClick="onCellTouch"
                android:text="@string/blank_cell"
                android:textSize="24sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/cell33"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/color1"

                android:onClick="onCellTouch"
                android:text="@string/blank_cell"
                android:textSize="24sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/cell34"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/color1"

                android:onClick="onCellTouch"
                android:text="@string/blank_cell"
                android:textSize="24sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/cell35"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/color1"

                android:onClick="onCellTouch"
                android:text="@string/blank_cell"
                android:textSize="24sp"
                android:textStyle="normal" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/cell40"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/color1"

                android:onClick="onCellTouch"
                android:text="@string/blank_cell"
                android:textSize="24sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/cell41"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/color1"

                android:onClick="onCellTouch"
                android:text="@string/blank_cell"
                android:textSize="24sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/cell42"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/color1"

                android:onClick="onCellTouch"
                android:text="@string/blank_cell"
                android:textSize="24sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/cell43"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/color2"

                android:onClick="onCellTouch"
                android:text="@string/blank_cell"
                android:textSize="24sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/cell44"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/color2"

                android:onClick="onCellTouch"
                android:text="@string/blank_cell"
                android:textSize="24sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/cell45"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/color2"

                android:onClick="onCellTouch"
                android:text="@string/blank_cell"
                android:textSize="24sp"
                android:textStyle="normal" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/cell50"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/color1"

                android:onClick="onCellTouch"
                android:text="@string/blank_cell"
                android:textSize="24sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/cell51"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/color1"

                android:onClick="onCellTouch"
                android:text="@string/blank_cell"
                android:textSize="24sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/cell52"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/color1"

                android:onClick="onCellTouch"
                android:text="@string/blank_cell"
                android:textSize="24sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/cell53"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/color2"

                android:onClick="onCellTouch"
                android:text="@string/blank_cell"
                android:textSize="24sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/cell54"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/color2"

                android:onClick="onCellTouch"
                android:text="@string/blank_cell"
                android:textSize="24sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/cell55"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/color2"

                android:onClick="onCellTouch"
                android:text="@string/blank_cell"
                android:textSize="24sp"
                android:textStyle="normal" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/numberPad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/choose1"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@drawable/off_button"
            android:onClick="onChoice"
            android:text="@string/number1"
            android:textSize="24sp"
            android:textStyle="normal|bold" />

        <Button
            android:id="@+id/choose2"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@drawable/off_button"

            android:onClick="onChoice"
            android:text="@string/number2"
            android:textSize="24sp"
            android:textStyle="normal|bold" />

        <Button
            android:id="@+id/choose3"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@drawable/off_button"

            android:onClick="onChoice"
            android:text="@string/number3"
            android:textSize="24sp"
            android:textStyle="normal|bold" />

        <Button
            android:id="@+id/choose4"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@drawable/off_button"

            android:onClick="onChoice"
            android:text="@string/number4"
            android:textSize="24sp"
            android:textStyle="normal|bold" />

        <Button
            android:id="@+id/choose5"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@drawable/off_button"

            android:onClick="onChoice"
            android:text="@string/number5"
            android:textSize="24sp"
            android:textStyle="normal|bold" />

        <Button
            android:id="@+id/choose6"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@drawable/off_button"

            android:onClick="onChoice"
            android:text="@string/number6"
            android:textSize="24sp"
            android:textStyle="normal|bold" />

        <Button
            android:id="@+id/choose_delete"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@drawable/off_button"

            android:onClick="onChoice"
            android:text="@string/delete"
            android:textSize="24sp"
            android:textStyle="normal|bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/successLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gameGrid"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/congratulations"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="21sp"
            android:textStyle="normal|bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/off_button"
            android:onClick="onNewClick"
            android:text="@string/new_game" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/puzzleIncomplete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gameGrid"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/puzzle_incomplete"
            android:textColor="@color/error_color"
            android:textSize="21sp"
            android:textStyle="normal|bold" />

    </LinearLayout>

</RelativeLayout>